--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <h1> Student catalog </h1>
+
+
+
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>SchoolId</th>
+                <th>Age</th>
+                <th>Grades</th>
+            </tr>
+        </thead>
+        <tbody id="StudentGetArea">
+        </tbody>
+    </table>
 
     <script src="script.js"></script>
 </body>
