create method added

--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -8,7 +8,22 @@
 <body>
     <h1> Student catalog </h1>
 
+    <div id="formdiv">
+        <dl>
+            <dt><label>Student Name</label></dt>
+            <dd><input type="text" id="stname" /></dd>
 
+            <dt><label>School Id</label></dt>
+            <dd><input type="number" id="stschoolid"</dd>
+
+            <dt><label>Age</label></dt>
+            <dd><input type="number" id="stage"</dd>
+
+            <dt><label>Grades</label></dt>
+            <dd><input type="number" id="stgradesavg"</dd>
+        </dl>
+        <button type="button" onclick="create()">Add student</button>
+    </div>
 
     <table>
         <thead>
