delete function added

--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -32,6 +32,7 @@
                 <th>SchoolId</th>
                 <th>Age</th>
                 <th>Grades</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody id="StudentGetArea">
