--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -39,6 +39,7 @@
         </tbody>
     </table>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
