update done for js

--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -14,15 +14,32 @@
             <dd><input type="text" id="stname" /></dd>
 
             <dt><label>School Id</label></dt>
-            <dd><input type="number" id="stschoolid"</dd>
+            <dd><input type="number" id="stschoolid"/></dd>
 
             <dt><label>Age</label></dt>
-            <dd><input type="number" id="stage"</dd>
+            <dd><input type="number" id="stage"/></dd>
 
             <dt><label>Grades</label></dt>
-            <dd><input type="number" id="stgradesavg"</dd>
+            <dd><input type="number" id="stgradesavg"/></dd>
         </dl>
         <button type="button" onclick="create()">Add student</button>
+    </div>
+
+    <div id="updateformdiv">
+        <dl>
+            <dt><label>Student Name</label></dt>
+            <dd><input type="text" id="st_u_name" /></dd>
+
+            <dt><label>School Id</label></dt>
+            <dd><input type="number" id="st_u_schoolid"/></dd>
+
+            <dt><label>Age</label></dt>
+            <dd><input type="number" id="st_u_age"/></dd>
+
+            <dt><label>Grades</label></dt>
+            <dd><input type="number" id="st_u_gradesavg"/></dd>
+        </dl>
+        <button type="button" onclick="update()">Update student</button>
     </div>
 
     <table>
