Student moved new file

--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Student UI</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="StStyle.css"/>
 </head>
 <body>
     <h1> Student catalog </h1>
-
+    <a href="htmlpage.html">sdfnhngasfé</a>
     <div id="formdiv">
         <dl>
             <dt><label>Student Name</label></dt>
@@ -57,6 +57,6 @@
     </table>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
-    <script src="script.js"></script>
+    <script src="StScript.js"></script>
 </body>
 </html>
