added teacher page reference

--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <title>Student UI</title>
-    <link rel="stylesheet" href="StStyle.css"/>
+    <link rel="stylesheet" href="mainstyle.css"/>
 </head>
 <body>
-    <h1> Student catalog </h1>
-    <a href="htmlpage.html">sdfnhngasfé</a>
+    <h1>Student catalog</h1> 
+    <a href="TchPage.html">Teacher catalog</a>
+
     <div id="formdiv">
         <dl>
             <dt><label>Student Name</label></dt>
