school page link added

--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/TchPage.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/TchPage.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Teacher catalog </h1>
     <a href="index.html">Student catalog</a>
+    <a href="ScPage.html">School catalog</a>
 
     <div id="formdiv">
         <dl>
