--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Student catalog</h1> 
     <a href="TchPage.html">Teacher catalog</a>
+    <a href="ScPage.html">School catalog</a>
 
     <div id="formdiv">
         <dl>
