--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/ScPage.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/ScPage.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>School catalog </h1>
-    <a href="index.html">Student catalog</a>
-    <a href="TchPage.html">Teacher catalog</a>
+    <h4><a href="index.html">Student catalog</a>
+        <a href="TchPage.html">Teacher catalog</a></h4>
 
     <div id="formdiv">
         <dl>
