--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Student catalog</h1> 
-    <a href="TchPage.html">Teacher catalog</a>
-    <a href="ScPage.html">School catalog</a>
+    <h4><a href="TchPage.html">Teacher catalog</a>
+        <a href="ScPage.html">School catalog</a></h4>
 
     <div id="formdiv">
         <dl>
